--- a/app/src/main/res/layout/map_search.xml
+++ b/app/src/main/res/layout/map_search.xml
@@ -15,20 +15,23 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/edittxt"
+            android:id="@+id/editPlace"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_width="match_parent"
             android:layout_weight="10"
-            android:hint="위치를 입력하세요" />
+            android:hint="위치를 입력하세요"
+            android:singleLine="true"
+            android:lines="1"/>
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/button"
             android:layout_height="match_parent"
             android:layout_width="64dp"
             android:layout_weight="1"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_search" />
+            app:srcCompat="@drawable/ic_search"
+             />
     </LinearLayout>
 
     <fragment
