--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#909090</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#945b32</color>
+    <color name="colorPrimaryDark">#734728</color>
+    <color name="colorAccent">#945b32</color>
 </resources>
