--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,4 +13,4 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main"
-    tools:context="mobileApp.project.CoffeeYo.MainActivity"/>
+    tools:context="mobileApp.project.CoffeeYo.UserActivity"/>
