--- a/app/src/main/res/layout/map_search.xml
+++ b/app/src/main/res/layout/map_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".map_search"
+    tools:context=".map_Search"
     android:paddingTop="22dp">
 
 
