--- a/app/src/main/res/menu/menu_right_side.xml
+++ b/app/src/main/res/menu/menu_right_side.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_right_menu"
-        android:title="right menu"
+        android:id="@+id/logout"
+        android:title="logout"
         android:icon="@drawable/ic_menu_white_24dp"
         android:orderInCategory="100"
         app:showAsAction="never"/>
