- manager 기본 fragment 추가 ReserveMFragment.java 추가 fragment_reserve_m.xml 추가

--- a/app/src/main/res/layout/fragment_congestion.xml
+++ b/app/src/main/res/layout/fragment_congestion.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="CongestionFragment">
+    tools:context=".CongestionFragment">
 
     <TextView
         android:id="@+id/congestion"
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:text="혼잡도 설정"
-        android:textSize="40dp"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
