--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,37 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="mobileApp.project.CoffeeYo.Login">
+    tools:context="mobileApp.project.Coffeeyo.Login">
 
 
-    <CheckBox
-        android:id="@+id/checkBox_u"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="55dp"
-        android:text="User"
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginTop="397dp"
+        android:layout_marginEnd="59dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintStart_toEndOf="@+id/checkBox_m" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <CheckBox
-        android:id="@+id/checkBox_m"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="Manager"
-        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox_u"
-        app:layout_constraintStart_toStartOf="@+id/button2" />
+        <RadioButton
+            android:id="@+id/r_btn1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginBottom="55dp"
+            android:layout_weight="1"
+            android:text="User" />
+
+        <RadioButton
+            android:id="@+id/r_btn2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_weight="1"
+            android:text="Manager" />
+    </RadioGroup>
+
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="194dp"
-        android:layout_height="56dp"
+        android:layout_width="182dp"
+        android:layout_height="63dp"
         android:layout_marginBottom="169dp"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
 
     출처: https://bitsoul.tistory.com/45 [Happy Programmer~]
