--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="mobileApp.project.Coffeeyo.Login">
+    tools:context="mobileApp.project.CoffeeYo.Login">
 
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/radioGp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="59dp"
@@ -48,9 +48,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
-
-
-    출처: https://bitsoul.tistory.com/45 [Happy Programmer~]
+        app:layout_constraintTop_toBottomOf="@+id/radioGp" />
 
 </android.support.constraint.ConstraintLayout>
