--- a/app/src/main/res/menu/manager_activity_main_drawer.xml
+++ b/app/src/main/res/menu/manager_activity_main_drawer.xml
@@ -6,7 +6,10 @@
         <item
             android:id="@+id/nav_register"
             android:icon="@drawable/ic_map"
-            android:title="카페 등록/관리" />
+            android:title="카페 등록/변경" />
+        <item
+            android:id="@+id/nav_menu"
+            android:title="메뉴 추가/삭제" />
         <item
             android:id="@+id/nav_reserved"
             android:icon="@drawable/ic_coffee"
