--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#945b32</color>
     <color name="colorPrimaryDark">#734728</color>
-    <color name="colorAccent">#945b32</color>
+    <color name="colorAccent">#945B32</color>
 </resources>
