--- a/app/src/main/res/menu/user_activity_main_drawer.xml
+++ b/app/src/main/res/menu/user_activity_main_drawer.xml
@@ -18,7 +18,7 @@
         <item
             android:id="@+id/nav_star"
             android:icon="@drawable/ic_star"
-            android:title="상품평" />
+            android:title="충전" />
     </group>
 
     <item android:title="Communicate">
