--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,8 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="User"
-            android:visibility="visible" />
+            android:text="User" />
 
         <RadioButton
             android:id="@+id/r_btn2"
