--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,9 +22,9 @@
         android:id="@+id/radioGroup"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="95dp"
+        android:layout_marginStart="90dp"
         android:layout_marginTop="397dp"
-        android:layout_marginEnd="95dp"
+        android:layout_marginEnd="90dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Manager" />
+            android:text="Manager"
+            android:singleLine="true"/>
     </RadioGroup>
 
 
