Manager reserve_m, register firebase 수정

--- a/app/src/main/res/layout/fragment_reserve_m.xml
+++ b/app/src/main/res/layout/fragment_reserve_m.xml
@@ -73,7 +73,7 @@
                 android:textSize="30dp"
                 android:gravity="center" />
 
-            <ListView
+            <TextView
                 android:id="@+id/myCafe"
                 android:layout_width="match_parent"
                 android:layout_height="300dp" />
