user activity+name search

--- a/app/src/main/res/layout/fragment_reserve.xml
+++ b/app/src/main/res/layout/fragment_reserve.xml
@@ -31,7 +31,7 @@
             android:gravity="center" />
 
         <ListView
-            android:id="@+id/listView"
+            android:id="@+id/orderlist"
             android:layout_width="match_parent"
             android:layout_height="650dp" />
 
