--- a/app/src/main/res/layout/name_search.xml
+++ b/app/src/main/res/layout/name_search.xml
@@ -30,7 +30,7 @@
 
 
         <ListView
-            android:id="@+id/listView"
+            android:id="@+id/cafenamelist"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
