--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -24,7 +24,7 @@
     app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="완료된 주문 내역"
@@ -32,7 +32,7 @@
             android:gravity="center" />
 
         <ListView
-            android:id="@+id/listView"
+            android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="650dp" />
 
