--- a/app/src/main/res/layout/fragment_cafemenu.xml
+++ b/app/src/main/res/layout/fragment_cafemenu.xml
@@ -45,7 +45,8 @@
                 android:id="@+id/menu"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:hint="메뉴를 입력하시오."/>
+                android:hint="메뉴를 입력하시오."
+                android:singleLine = "true"/>
 
         </LinearLayout>
 
